# robot-dynamics-identify-v1.3

./: README.md
dynamics_library/: CMakeLists.txt
dynamics_library/include/dynamics_identify/: dynamics_identify.h
dynamics_library/include/robot_dynamics/: robot_dynamics.h
dynamics_library/include/robot_model/: robot_model.h
dynamics_library/src/dynamics_identify/: dynamics_identify.cpp
dynamics_library/src/robot_dynamics/: robot_dynamics.cpp
dynamics_library/src/robot_model/: robot_model.cpp
examples/calculate_dynamics/: CMakeLists.txt
examples/calculate_dynamics/src/: calculate_dynamics.cpp
examples/excitation_trajectory/src/: excitation_trajectory.cpp
examples/least_square_estimate/: CMakeLists.txt
examples/least_square_estimate/filter_data/: q_filter.mat  tau_filter.mat
examples/least_square_estimate/identify_result/: base_dynamics_parameters.txt  standard_dynamics_parameters.txt  tau_iden.mat
examples/least_square_estimate/include/: least_square.h
examples/least_square_estimate/src/: least_square.cpp  least_square_estimate.cpp
other_files/data_filter/: data_filter.m  digital_differentiator.m  digital_filter.m  plot_data.m  qDDot_filter.mat  qDot.mat  qDot_filter.mat
other_files/plot_excitation_trajectory/: generate_fourier_trajectory.m  plot_excitation_trajectory.m  plot_excitation_trajectory.m~
other_files/process_data/: q.mat  tau.mat
other_files/verify_identify_result/: plot_data.m  t.mat
